# oran-optee-apps

./: .gitignore  LICENSE  readme.md
adi_i2c/: CMakeLists.txt
adi_i2c/host/: adi_i2c.c  adi_i2c.h  main.c
adi_memdump/: CMakeLists.txt
adi_memdump/host/: adi_memdump.c  adi_memdump.h  main.c
adi_runtime_log/: CMakeLists.txt
adi_runtime_log/host/: main.c
adimem/: CMakeLists.txt
adimem/host/: adimem.c  adimem.h  main.c
alive_request/: CMakeLists.txt
alive_request/host/: main.c
boot_successful/: CMakeLists.txt
boot_successful/host/: main.c
common/: entrypoints.c
common/include/: adi_ta_common.h
enforcement_counter/: CMakeLists.txt
enforcement_counter/host/: main.c
enforcement_counter_update/: CMakeLists.txt
enforcement_counter_update/host/: main.c
example_early/: CMakeLists.txt
example_early/early_ta/: Makefile  example_early_ta.c  sub.mk  user_ta_header_defines.h
example_early/early_ta/include/: example_early_ta.h
example_early/host/: main.c
example_reg/: CMakeLists.txt
example_reg/host/: main.c
example_reg/ta/: Makefile  example_reg_ta.c  sub.mk  user_ta_header_defines.h
example_reg/ta/include/: example_reg_ta.h
otp_macs/: CMakeLists.txt
otp_macs/host/: mac_helper.c  mac_helper.h  main.c  otp_macs.c  otp_macs.h
otp_temp/: CMakeLists.txt
otp_temp/host/: main.c  otp_temp.c  otp_temp.h
secondary_launcher/: CMakeLists.txt
secondary_launcher/host/: main.c
te_mailbox/: CMakeLists.txt
te_mailbox/host/: main.c  te_mailbox.c  te_mailbox.h
